2009-05-12  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: New deps.
	* AbstractTest.java (createProject): Preemptively add ManagedBuild and ScannerConfig
	natures before project is imported for #273079.

2009-04-21  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Added new deps for controlling Indexer.
	* AbstractTest.java (createProject): Turn off workspace building,
	turn off indexer while creating.
	(createProjectAndBuild): Make protected.
	(buildProject): Build type from INCREMENTAL to FULL. Make protected.

2009-04-07  Elliott Baron  <ebaron@redhat.com>

	* AbstractTest.java (deleteProject): Wrap this in a IWorkspaceRunnable.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* Messages.java: New file.
	* messages.properties: New file.
	* AbstractTest.java (createConfiguration): If binary not found,
	fail with informative error.
	(buildProject): Refresh workspace in IWorkspaceRunnable.
	* AbstractTest.java (createProject): Refactored "Debug".
	(createConfiguration): Use job with buildRule, taken from ManagedBuilder tests.
	* META-INF/MANIFEST.MF: 0.2.0 version.	

2009-03-18  Elliott Baron  <ebaron@redhat.com>

	* AbstractTest.java (createProject): Split into creation and building.
	(createProjectAndBuild): Renamed from createProject.
	(buildProject): New method.

2009-02-03  Elliott Baron  <ebaron@redhat.com>

	* LaunchConfigTabTest: Removed for now.
	* META-INF/MANIFEST.MF: Require-Bundle for JUnit < 4.0.0

2009-01-05  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Changed version to 0.1.0.
	* build.properties: Include about.html and icons.
	* about.html: Added.