@@ -1,3 +1,7 @@
+2009-06-23  Elliott Baron  <ebaron@redhat.com>
+
+	* AbstractTest.java (createConfiguration): Throw CoreException.
+
 2009-05-12  Elliott Baron  <ebaron@redhat.com>
 
 	* META-INF/MANIFEST.MF: New deps.
